--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.yunjingliu.tutorial">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -20,12 +21,14 @@
         <activity
             android:name=".RegistrationActivity"
             android:parentActivityName=".loginActivity">
+
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".loginActivity" />
         </activity>
-        <activity android:name=".UserareaActivity"></activity>
+        <activity android:name=".UserareaActivity" />
+        <activity android:name=".TutorSessionPostActivity"></activity>
     </application>
 
 </manifest>
