--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".LoginActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,9 +29,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginActivity" />
         </activity>
-        <activity android:name=".UserareaActivity" />
-        <activity android:name=".TutorSessionPostActivity" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity
+            android:name=".UserareaActivity"
+            android:launchMode="singleTop"/>
+        <activity
+            android:name=".TutorSessionPostActivity"
+            android:parentActivityName=".UserareaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".UserareaActivity"/>
+        </activity>
+        <activity android:name=".SearchActivity" />
     </application>
 
 </manifest>
