--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".UserareaActivity"
             android:launchMode="singleTop"/>
+
         <activity
             android:name=".TutorSessionPostActivity"
             android:parentActivityName=".UserareaActivity">
@@ -40,6 +41,13 @@
                 android:value=".UserareaActivity"/>
         </activity>
         <activity android:name=".SearchActivity" />
+        <activity
+            android:name=".SessionDetailActivity"
+            android:parentActivityName=".UserareaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".UserareaActivity"/>
+        </activity>
     </application>
 
 </manifest>
