--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UserareaActivity"/>
         </activity>
-
+        <activity
+            android:name=".SessionDetailActivity"
+            android:parentActivityName=".UserareaActivity"/>
         <!-- this is the searchable activity; it performs searches -->
         <activity android:name=".SearchableActivity" >
             <intent-filter>
@@ -53,17 +55,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UserareaActivity"/>
         </activity>
-
-        <!-- this activity enables the search dialog to initiate searches
-             in the SearchableActivity -->
-        <activity android:name=".OtherActivity"
-                  android:launchMode="singleTop" >
-        <!-- enable the search dialog to send searches to SearchableActivity -->
-        <meta-data android:name="android.app.default_searchable"
-            android:value=".SearchableActivity" />
-    </activity>
-
-
 </application>
 
 
