--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
             android:name=".SessionDetailActivity"
             android:parentActivityName=".UserareaActivity"/>
         <!-- this is the searchable activity; it performs searches -->
-        <activity android:name=".SearchableActivity" >
+        <activity android:name=".SearchableActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
