--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UserareaActivity"/>
         </activity>
+        <activity
+            android:name=".SessionAppliedActivity"/>
 </application>
 
 
