--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UserareaActivity"/>
         </activity>
+
+        <!--<activity-->
+            <!--android:name=".SessionDetailActivity"-->
+            <!--android:parentActivityName=".UserareaActivity"/>-->
         <activity
-            android:name=".SessionDetailActivity"
-            android:parentActivityName=".UserareaActivity"/>
+            android:name=".SessionDetailActivity"/>
+
         <!-- this is the searchable activity; it performs searches -->
         <activity android:name=".SearchableActivity"
             android:launchMode="singleTop">
