--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name=".RegistrationActivity"
             android:parentActivityName=".LoginActivity">
+
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -31,33 +32,35 @@
         </activity>
         <activity
             android:name=".UserareaActivity"
-            android:launchMode="singleTop"/>
-
+            android:launchMode="singleTop" />
         <activity
             android:name=".TutorSessionPostActivity"
             android:parentActivityName=".UserareaActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".UserareaActivity"/>
+                android:value=".UserareaActivity" />
         </activity>
-        <activity
-            android:name=".SessionDetailActivity"/>
+        <activity android:name=".SessionDetailActivity" />
         <!-- this is the searchable activity; it performs searches -->
-        <activity android:name=".SearchableActivity"
+        <activity
+            android:name=".SearchableActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
-            <!--android:parentActivityName=".UserareaActivity">-->
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            <!-- android:parentActivityName=".UserareaActivity"> -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".UserareaActivity"/>
+                android:value=".UserareaActivity" />
         </activity>
+        <activity android:name=".SessionAppliedActivity" />
         <activity
-            android:name=".SessionAppliedActivity"/>
-</application>
-
+            android:name=".test"
+            android:label="@string/title_activity_test"></activity>
+    </application>
 
 </manifest>
