msg list function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
         </activity>
         <activity
             android:name=".SessionAppliedActivity"/>
+        <activity
+            android:name=".MsgActivity" />
 </application>
 
 
