--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MyApp"
+        android:name=".helper_class.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -40,7 +40,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UserareaActivity" />
         </activity>
-
         <activity android:name=".SessionDetailActivity" />
 
         <!-- this is the searchable activity; it performs searches -->
@@ -60,10 +59,10 @@
                 android:value=".UserareaActivity" />
         </activity>
         <activity android:name=".SessionAppliedActivity" />
+        <activity android:name=".MsgActivity" />
         <activity
-            android:name=".MsgActivity" />
-        <activity
-            android:name=".DukeTutor"
-            android:label="@string/title_activity_test"/>
+            android:name=".navigation.DukeTutor"
+            android:label="@string/title_activity_test" />
     </application>
+
 </manifest>
