--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UserareaActivity" />
         </activity>
-
         <activity android:name=".SessionDetailActivity" />
 
         <!-- this is the searchable activity; it performs searches -->
@@ -60,12 +59,12 @@
                 android:value=".UserareaActivity" />
         </activity>
         <activity android:name=".SessionAppliedActivity" />
-        <activity
-            android:name=".SessionAppliedActivity"/>
-        <activity
-            android:name=".MsgActivity" />
+        <activity android:name=".SessionAppliedActivity" />
+        <activity android:name=".MsgActivity" />
         <activity
             android:name=".test"
-            android:label="@string/title_activity_test"></activity>
+            android:label="@string/title_activity_test" />
+        <activity android:name=".FeedbackActivity"></activity>
     </application>
+
 </manifest>
