--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
         <activity
             android:name=".test"
             android:label="@string/title_activity_test" />
-        <activity android:name=".FeedbackActivity"></activity>
+        <activity android:name=".FeedbackActivity" />
+        <activity android:name=".TutorHistoryActivity"></activity>
     </application>
 
 </manifest>
