--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     // Required for instrumented tests
     androidTestCompile 'com.android.support:support-annotations:24.0.0'
     androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+
 
 }
