--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".registration_and_login.LoginActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,25 +22,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegistrationActivity"
-            android:parentActivityName=".LoginActivity">
+            android:name=".registration_and_login.RegistrationActivity"
+            android:parentActivityName=".registration_and_login.LoginActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".LoginActivity" />
+                android:value=".registration_and_login.LoginActivity" />
         </activity>
 
         <!-- this is the searchable activity; it performs searches -->
-        <activity android:name=".FeedbackActivity" />
-        <activity android:name=".MsgActivity" />
+        <activity android:name=".otherActivities.FeedbackActivity" />
+        <activity android:name=".otherActivities.MsgActivity" />
         <activity
             android:name=".navigation.DukeTutor"
             android:label="@string/title_activity_test" />
         <activity
-            android:name=".MsgDetailActivity"/>
-        <activity
-            android:name=".TutorSessionPostActivity"/>
+            android:name=".otherActivities.MsgDetailActivity"/>
     </application>
 
 </manifest>
